[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tests/dumpy.gd" type="Script" id=1]
[ext_resource path="res://Assets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=4]
radius = 14.9175

[sub_resource type="CircleShape2D" id=2]
radius = 58.6189

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.75
height = 17.4137

[node name="dumpy" type="KinematicBody2D" groups=[
"dumpy",
]]
collision/safe_margin = 56.969
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 163, 224, 10, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="OutOfWayCollider" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutOfWayCollider"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="OutOfWayCollider" to="." method="_on_OutOfWayCollider_body_entered"]
[connection signal="body_exited" from="OutOfWayCollider" to="." method="_on_OutOfWayCollider_body_exited"]
